<resources>
    <string name="app_name">SignUP</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Email</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Unifreelancer</string>
    <string name="country_location">Malaysia</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display Name</string>
    <string name="unifreelancer_smile">Unifreelancer</string>


    <string name="edit_profile_names">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone Number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="edit_profile_date">Date</string>
    <string name="edit_profile_save">SAVE EDIT</string>









</resources>
