<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context="com.unifreelancer.signup.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorAccent"
        android:text="@string/no_text"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_56sdp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="16.80dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints=""
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16.80dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/login_button"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_8sdp"/>

    <TextView

        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>